# TransTiQ

./: .gitignore  LICENSE  README.md  pyproject.toml  test_transtiq.py  transtiq.cmd  transtiq.py
.github/workflows/: ci.yml
examples/: giraffe_long_cn.txt  giraffe_short_cn.txt
tests/: test_transtiq.py
